--- a/HTML-CSS-BASIC/ProjetosPraticos/ProjetoIntegrador_01/assets/css/servicos.css
+++ b/HTML-CSS-BASIC/ProjetosPraticos/ProjetoIntegrador_01/assets/css/servicos.css
@@ -25,7 +25,7 @@ h6,
 strong,
 span {
     font-family: 'Poppins', sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     color: #ad7ce2;
 }
 
@@ -97,31 +97,9 @@ nav a:hover {
 
 /* ICONS */
 
-.contatos {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 20px auto;
-    gap: 1rem;
-    width: 100%;
-    height: auto;
-}
-
 .icons {
     width: 100px;
     height: 100px;
-}
-
-.icons-contatos {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin: 30px auto;
-    gap: 1rem;
-    width: 40px;
-    height: 40px;
 }
 
 /* PARTES DO SITE */
@@ -145,48 +123,48 @@ section.containerPartes p {
     line-break: loose;
 }
 
-/* FORMULÁRIO */
-
-.formulario h2 {
+.servo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin: 30px auto;
-    font-size: 1.5rem;
+    gap: 1rem;
+    width: 80%;
 }
 
-form {
-    width: 50%;
-    margin: auto;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+.servo p {
+    line-height: 140%;
+    line-break: loose;
+    margin: 10px auto;
 }
 
-label {
-    display: block;
-    margin-bottom: 8px;
-}
+/* SERVIÇOS */
 
-input,
-textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-button {
-    background-color: #4c0a97;
-    color: white;
-    padding: 15px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-button:hover {
+dl {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 5px auto;
+    width: 90%;
     background-color: #040416;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+dt {
+    font-size: 1.3rem;
+    font-weight: 500;
+    color: #fff;
+    margin: 10px auto;
+}
+
+dd {
+    font-size: 1.1rem;
+    font-weight: 300;
+    color: #fff;
+    margin: 10px auto;
 }
 
 /* MENU BOTTOM */
@@ -227,12 +205,24 @@ button:hover {
     border-radius: 5px;
 }
 
-/* MAPS */
+/* VOLTAR PARA PROJETOS */
 
-.maps {
-    width: 100%;
-    height: 450px;
-    margin: 30px auto;
+.botao-fixo {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    padding: 10px 20px;
+    background-color: #4c0a97;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+}
+
+.botao-fixo:hover {
+    background-color: #fefefe;
+    color: #01010a;
 }
 
 /* FOOTER */
